--- a/src/public/views/lesson.html
+++ b/src/public/views/lesson.html
@@ -119,6 +119,7 @@
                                 </div>
                         </div>
                 </main>
+                <div id="toast-container"></div>
         </div>
 </body>
 </html>
