--- a/src/public/views/404.html
+++ b/src/public/views/404.html
@@ -3,6 +3,7 @@
         <head>
                 <title>Programmar</title>
                 <link rel="stylesheet" type="text/css" href="public/styles/main.css">
+                <link rel="icon" type="image/svg+xml" href="public/resources/logo.svg">
         </head>
         <body>
                 <h1>404</h1>
