--- a/src/public/views/dashboard.html
+++ b/src/public/views/dashboard.html
@@ -4,6 +4,7 @@
                 <title>Programmar - Dashboard</title>
                 <link rel="stylesheet" type="text/css" href="public/styles/main.css">
                 <link rel="stylesheet" type="text/css" href="public/styles/dashboard.css">
+                <link rel="icon" type="image/svg+xml" href="public/resources/logo.svg">
                 <script src="public/scripts/main.js" defer></script>
         </head>
         <body>
