--- a/src/public/views/lesson.html
+++ b/src/public/views/lesson.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="public/styles/main.css">
         <link rel="stylesheet" href="public/styles/dashboard.css">
         <link rel="stylesheet" href="public/styles/lesson.css">
-
+        <link rel="icon" type="image/svg+xml" href="public/resources/logo.svg">
         <script src="public/scripts/lesson.js" defer></script>
 </head>
 <body>
