--- a/src/public/views/settings.html
+++ b/src/public/views/settings.html
@@ -6,6 +6,7 @@
         <title>Settings - Coder</title>
         <link rel="stylesheet" href="public/styles/main.css">
         <link rel="stylesheet" href="public/styles/settings.css">
+        <link rel="icon" type="image/svg+xml" href="public/resources/logo.svg">
         <script src="public/scripts/settings.js" defer></script>
 </head>
 <body>
