--- a/src/public/views/courses.html
+++ b/src/public/views/courses.html
@@ -77,6 +77,7 @@
                                                 </div>
 
                                                 <form action="/start-course" method="POST">
+                                                        <input type="hidden" name="csrf_token" value="<?= $_SESSION['csrf_token'] ?>">
                                                         <input type="hidden" name="id" value="<?= $course['id'] ?>">
                                                         <?php if($course['completed_lessons'] == 0): ?>
                                                                 <button type="submit" class="btn-continue" style="background-color: var(--secondary);">Start Learning</button>
