--- a/src/public/views/courses_catalog.html
+++ b/src/public/views/courses_catalog.html
@@ -69,6 +69,7 @@
                                                 </div>
 
                                                 <form action="/start-course" method="POST">
+                                                        <input type="hidden" name="csrf_token" value="<?= $_SESSION['csrf_token'] ?>">
                                                         <input type="hidden" name="id" value="<?= $course['id'] ?>">
                                                         <?php if ($ram > 0): ?>
                                                                 <?php if($course['completed_lessons'] > 0): ?>
