--- a/src/public/views/settings.html
+++ b/src/public/views/settings.html
@@ -28,7 +28,7 @@
                                 <div class="form-group">
                                         <label for="name">Display Name</label>
                                         <input type="text" id="name" name="name" 
-                                               value="<?= $username ?>" 
+                                               value="<?= htmlspecialchars($username, ENT_QUOTES, 'UTF-8') ?>"
                                                placeholder="Enter your name">
                                 </div>
                                 <button type="submit" class="btn-save" style="width: auto;">Save Changes</button>
