--- a/src/public/views/dashboard.html
+++ b/src/public/views/dashboard.html
@@ -2,6 +2,7 @@
 <html>
         <head>
                 <title>Programmar - Dashboard</title>
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <link rel="stylesheet" type="text/css" href="public/styles/main.css">
                 <link rel="stylesheet" type="text/css" href="public/styles/dashboard.css">
                 <link rel="icon" type="image/svg+xml" href="public/resources/logo.svg">
