added ability to serve videos in lessons

--- a/src/public/views/lesson.html
+++ b/src/public/views/lesson.html
@@ -70,7 +70,10 @@
                                                         <div class="slide-content-area">
                                                                 <?php if ($sub['type'] === 'info'): ?>
                                                                         <p class="lesson-text"><?= nl2br(htmlspecialchars($sub['content'])) ?></p>
-
+                                                                <?php elseif ($sub['type'] === 'video'): ?>
+                                                                        <div class="video-container">
+                                                                                <iframe src="<?= htmlspecialchars($sub['url']) ?>" allowfullscreen></iframe>
+                                                                        </div>
                                                                 <?php else: ?>
                                                                         <p class="question-text"><?= htmlspecialchars($sub['question']) ?></p>
 
