--- a/src/public/views/lesson.html
+++ b/src/public/views/lesson.html
@@ -31,7 +31,7 @@
 
                         <div class="sidebar-footer">
                                 <a href="/logout" class="logout-link">
-                                        <span>🚪</span> Logout
+                                        Logout
                                 </a>
                         </div>
                 </nav>
