--- a/src/public/views/403.html
+++ b/src/public/views/403.html
@@ -3,8 +3,8 @@
         <head>
                 <title>Programmar</title>
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <link rel="stylesheet" type="text/css" href="public/styles/main.css">
-                <link rel="icon" type="image/svg+xml" href="public/resources/logo.svg">
+                <link rel="stylesheet" type="text/css" href="/public/styles/main.css">
+                <link rel="icon" type="image/svg+xml" href="/public/resources/logo.svg">
         </head>
         <body>
                 <h1>403</h1>
