--- a/src/public/views/register.html
+++ b/src/public/views/register.html
@@ -6,6 +6,7 @@
                 <link rel="stylesheet" type="text/css" href="public/styles/main.css">
                 <link rel="stylesheet" type="text/css" href="public/styles/login.css">
                 <link rel="icon" type="image/svg+xml" href="public/resources/logo.svg">
+                <script src="public/scripts/main.js" defer></script>
                 <script src="public/scripts/register.js" defer></script>
         </head>
         <body>
