--- a/src/public/views/lesson.html
+++ b/src/public/views/lesson.html
@@ -18,7 +18,7 @@
                                         <h1><?= htmlspecialchars($lesson['title']) ?></h1>
 
                                         <div class="lesson-meta" style="margin-top: 10px;">
-                                                <span class="lesson-badge">Lesson <?= $lessonNumber ?></span>
+                                                <span class="lesson-badge" data-lesson-num="<?= $lessonNumber ?>">Lesson <?= $lessonNumber ?></span>
                                         </div>
                                 </div>
 
